# gitit-server.hs

./: README.md  gitit-server.cabal  shell.nix  stack.yaml
data/: default.conf
src/: Main.hs
src/Network/Gitit/: Server.hs
