name:                gitit-server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/michelk/gitit-server#readme
license:             BSD3
license-file:        LICENSE
author:              Michel Kuhlmann
maintainer:          kum@tkconsult.ch
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable gitit-server
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , filepath
                     , gitit
                     , happstack-server
                     , optparse-applicative
                     , xhtml
  default-language:    Haskell2010

test-suite gitit-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michelk/gitit-server
